# Sprin2026ReasonBench

./: .gitignore  README.md  pyproject.toml
configs/experiments/: full_livebench_all_strategies.toml  full_room_assignment_all_strategies.toml  full_truthfulqa_all_strategies.toml  livebench_reasoning.toml  paper_suite.toml  room_assignment.toml  truthfulqa.toml
data/: dataset_manifest.json
docs/: architecture.md  research_playbook.md
research/dataset_papers/: papers_catalog.json  papers_catalog.md  top20_high_confidence.csv  top20_high_confidence.md  verified_only_catalog.csv  verified_only_catalog.md
research/dataset_papers/charts/: README.md
research/dataset_papers/dashboard/: app.js  index.html  styles.css
sample_data/: room_assignment.jsonl  truthfulqa.csv
sample_data/livebench_reasoning/: question.jsonl
scripts/: download_full_datasets.py  prepare_timestamped_runs.py  run_experiment_with_resume.sh  start_full_experiments_screen.sh  sync_monitor_frontend_to_public_server.sh  update_status_snapshot.py
src/reasonbench/: config.py  types.py
src/reasonbench/cli/: run.py  sweep.py
src/reasonbench/clients/: base.py  openai_compatible.py
src/reasonbench/datasets/: base.py  livebench.py  room_assignment.py  truthfulqa.py
src/reasonbench/evaluators/: base.py  livebench.py  room_assignment.py  truthfulqa.py
src/reasonbench/runtime/: cache.py  (+6 more)
tests/: test_checkpoint_resume.py  test_room_assignment_eval.py  test_runner_smoke.py  test_strategy_registry.py  test_truthfulqa_eval.py
web/session-monitor/: app.js  index.html  status.json  styles.css
(+7 files in other folders)
